# BeFitBackend

./: .env.template  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: mypy.yml  pylint.yml
alembic/: env.py
alembic/versions/: 3eb1607d948a_create_user_model.py
app/: initial_data.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/schemas/auth/: mutation.py
app/api/api_v1/schemas/user/: mutation.py  query.py
app/core/: config.py
app/db/: async_session.py  base.py  base_class.py  init_db.py
app/fragments/: __init__.py  login.py  user.py
app/inputs/: __init__.py
app/inputs/pagination/: pagination.py
app/inputs/user/: user_create.py
app/models/: __init__.py
app/models/user/: user.py
app/resolvers/: __init__.py
app/resolvers/user/: create_user.py  login_user.py
app/scalars/: __init__.py
app/scalars/auth/: login.py  token.py
app/scalars/pagination/: pagination_metadata.py
app/scalars/user/: user.py
app/security/: __init__.py  authentication.py  context.py
app/tests/: context.py
app/tests/queries/: create_user.py  current_user.py  login.py
app/tests/user/: test_auth.py  test_current_user.py  test_user.py
app/utils/pagination/: get_pagination_metadata.py
app/utils/resolvers/: __init__.py  convert_camel_case.py  get_only_selected_fields.py  get_valid_data.py
docker/: backend.dockerfile
scripts/: format.sh  lint.sh  test.sh
